--- a/index.html
+++ b/index.html
@@ -504,5 +504,32 @@
         </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <button class="modal--close">
+          <svg class="icon icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal--ttl">Leave your contacts and we will call you back</p>
+        <form action="#" class="form">
+          <div class="form--item">
+            <label for="#name" class="form--label">Name</label>
+            <div class="form--input-wrapper">
+              <input
+                class="form--input"
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Taras Shevchenko"
+              />
+              <svg class="icon form--input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-input-user"></use>
+              </svg>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
