--- a/index.html
+++ b/index.html
@@ -504,23 +504,23 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
-        <button class="modal--close">
-          <svg class="icon icon-close" width="8" height="8">
+        <button type="button" class="modal--close">
+          <svg class="icon icon-close modal--close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal--ttl">Leave your contacts and we will call you back</p>
         <form action="#" class="form">
           <div class="form--item">
-            <label for="#name" class="form--label">Name</label>
+            <label for="user-name" class="form--label">Name</label>
             <div class="form--input-wrapper">
               <input
                 class="form--input"
                 type="text"
-                name="name"
-                id="name"
+                name="user-name"
+                id="user-name"
                 placeholder="Taras Shevchenko"
               />
               <svg class="icon form--input-icon" width="18" height="24">
@@ -528,6 +528,66 @@
               </svg>
             </div>
           </div>
+          <div class="form--item">
+            <label for="user-phone" class="form--label">Phone</label>
+            <div class="form--input-wrapper">
+              <input
+                class="form--input"
+                type="text"
+                name="user-phone"
+                id="user-phone"
+                placeholder="+380 50 66 36 394"
+              />
+              <svg class="icon form--input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-input-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form--item">
+            <label for="user-email" class="form--label">Email</label>
+            <div class="form--input-wrapper">
+              <input
+                class="form--input"
+                type="text"
+                name="user-email"
+                id="user-email"
+                placeholder="taras.shevchenko@gmail.com"
+              />
+              <svg class="icon form--input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-input-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form--item">
+            <label for="user-comment" class="form--label">Comment</label>
+            <div class="form--input-wrapper">
+              <textarea
+                class="form--input form--input-textarea"
+                name="user-comment"
+                id="user-comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+          <div class="form--privacy">
+            <input
+              class="form--input-privacy visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="form--label form--label-privacy" for="user-privacy">
+              <span class="form--checkbox">
+                <svg class="icon form--checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox-checked"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form--btn">Send</button>
         </form>
       </div>
     </div>
