firs input to test

--- a/index.html
+++ b/index.html
@@ -558,16 +558,14 @@
               </svg>
             </div>
           </div>
-          <div class="form--item">
+          <div class="form--item form--item-textarea">
             <label for="user-comment" class="form--label">Comment</label>
-            <div class="form--input-wrapper">
-              <textarea
-                class="form--input form--input-textarea"
-                name="user-comment"
-                id="user-comment"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+            <textarea
+              class="form--input form--input-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="form--privacy">
             <input
