--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
           </p>
         </div>
         <div class="footer-social">
-          <p class="footer-social-ttl">Social media</p>
+          <p class="footer-ttl">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-list--item">
               <a href="#" class="footer-social-list--link">
@@ -502,9 +502,33 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-ttl">Subscribe</p>
+          <from class="footer-form">
+            <label class="footer-form--label" for="subscribe">
+              <input
+                class="footer-from--input"
+                type="email"
+                name="subscribe"
+                id="subscribe"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn footer-from--btn" type="submit">
+              Subscribe
+              <svg
+                class="icon icon-send modal--close-icon"
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </from>
+        </div>
       </div>
     </footer>
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button type="button" class="modal--close">
           <svg class="icon icon-close modal--close-icon" width="8" height="8">
