firs input to test

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         </div>
         <div class="footer-subscribe">
           <p class="footer-ttl">Subscribe</p>
-          <from class="footer-form">
+          <form class="footer-form">
             <label class="footer-form--label" for="subscribe">
               <input
                 class="footer-from--input"
@@ -524,7 +524,7 @@
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
-          </from>
+          </form>
         </div>
       </div>
     </footer>
