--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <button class="btn footer-from--btn" type="submit">
               Subscribe
               <svg
-                class="icon icon-send modal--close-icon"
+                class="icon icon-send footer-from--icon"
                 width="24"
                 height="24"
               >
